--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -214,6 +214,30 @@ Resources:
       DomainName: !Ref ProductionRestApiDomainName
       RestApiId: !Ref ProxyRestApi
       Stage: prod
+  ApiGateway5XXAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Properties:
+      ActionsEnabled: true
+      AlarmName: !Sub "[proxy.prx.org][${EnvironmentType}] 5XXErrors"
+      AlarmActions:
+        - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
+      InsufficientDataActions:
+        - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
+      OKActions:
+        - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
+      AlarmDescription: >
+        Too many 500 errors from the corporate site proxy
+      ComparisonOperator: GreaterThanThreshold
+      Dimensions:
+        - Name: ApiName
+          Value: !Sub "${AWS::StackName} API"
+      EvaluationPeriods: "3"
+      MetricName: 5xxError
+      Namespace: AWS/ApiGateway
+      Period: "300"
+      Statistic: Sum
+      Threshold: "1"
+      TreatMissingData: notBreaching
 Outputs:
   ApiDomainName:
     Description: The custom API domain name
