Add assumable role for VPC peering
Allows the role the be assumed by anyone in the organization

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -15,6 +15,8 @@ Conditions:
   IsStaging: !Equals [!Ref EnvironmentType, Staging]
   IsProduction: !Equals [!Ref EnvironmentType, Production]
 Parameters:
+  AwsOrganizationId:
+    Type: String
   AsgKeyPairName:
     Description: >
       The EC2 key pair used for instances in the Auto Scaling
@@ -245,6 +247,7 @@ Resources:
             !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         EnvironmentType: !Ref EnvironmentType
+        AwsOrganizationId: !Ref AwsOrganizationId
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
