--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -18,6 +18,8 @@ Parameters:
     Type: String
   WildcardCertificateArn:
     Type: String
+  LogGroupRetentionPolicyFunctionArn:
+    Type: AWS::SSM::Parameter::Value<String>
 Resources:
   # API Gateway
   UploadRestApi:
@@ -260,6 +262,12 @@ Resources:
       Dimensions:
         - Name: FunctionName
           Value: !Ref UploadLambdaFunction
+  UploadLambdaLogExpiration:
+    Type: "Custom::LogGroupRetentionPolicy"
+    Properties:
+      ServiceToken: !Ref LogGroupRetentionPolicyFunctionArn
+      LogGroupName: !Sub "/aws/lambda/${UploadLambdaFunction}"
+      RetentionInDays: 60
 Outputs:
   ApiDomainName:
     Description: The custom API domain name
