Remove dupe resource on pipeline IAM policy

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -436,7 +436,7 @@ Resources:
                 Resource:
                   - !GetAtt AcceptanceTestsCodeBuildProject.Arn
                   - !Sub "${AcceptanceTestsCodeBuildProject.Arn}/*"
-                Resource: "*"
+                # Resource: "*"
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
     Properties:
