Clean up CD temlate types

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -204,12 +204,12 @@ Resources:
         The error rate on the failure notification lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -283,12 +283,12 @@ Resources:
         The error rate on the approval notification handler lambda has exceeded
         0 in the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -452,7 +452,7 @@ Resources:
                 Category: Source
                 Owner: ThirdParty
                 Provider: GitHub
-                Version: 1
+                Version: "1"
               Configuration:
                 Owner: PRX
                 Repo: Infrastructure
@@ -466,7 +466,7 @@ Resources:
                 Category: Source
                 Owner: ThirdParty
                 Provider: GitHub
-                Version: 1
+                Version: "1"
               Configuration:
                 Owner: PRX
                 Repo: meta.prx.org
@@ -480,7 +480,7 @@ Resources:
                 Category: Source
                 Owner: AWS
                 Provider: S3
-                Version: 1
+                Version: "1"
               Configuration:
                 PollForSourceChanges: false
                 S3Bucket:
@@ -497,7 +497,7 @@ Resources:
                 Category: Invoke
                 Owner: AWS
                 Provider: Lambda
-                Version: 1
+                Version: "1"
               Configuration:
                 FunctionName: !Ref InfrastructureRepoSourceS3SyncFunction
               InputArtifacts:
@@ -508,7 +508,7 @@ Resources:
                 Category: Invoke
                 Owner: AWS
                 Provider: Lambda
-                Version: 1
+                Version: "1"
               Configuration:
                 FunctionName: !Ref InfrastructureCommitProxyFunction
               InputArtifacts:
@@ -521,7 +521,7 @@ Resources:
                 Category: Invoke
                 Owner: AWS
                 Provider: Lambda
-                Version: 1
+                Version: "1"
               Configuration:
                 FunctionName: !Ref DeploymentNotificationFunction
                 UserParameters: !Sub |
@@ -540,7 +540,7 @@ Resources:
                 Category: Deploy
                 Owner: AWS
                 Provider: CloudFormation
-                Version: 1
+                Version: "1"
               Configuration:
                 ActionMode: CHANGE_SET_REPLACE
                 Capabilities: CAPABILITY_IAM
@@ -567,7 +567,7 @@ Resources:
                 Category: Invoke
                 Owner: AWS
                 Provider: Lambda
-                Version: 1
+                Version: "1"
               Configuration:
                 FunctionName: !Ref ChangeSetDeltaNotificationFunction
                 UserParameters: !Sub |
@@ -585,7 +585,7 @@ Resources:
                 Category: Deploy
                 Owner: AWS
                 Provider: CloudFormation
-                Version: 1
+                Version: "1"
               Configuration:
                 ActionMode: CHANGE_SET_EXECUTE
                 Capabilities: CAPABILITY_IAM
@@ -598,7 +598,7 @@ Resources:
                 Category: Invoke
                 Owner: AWS
                 Provider: Lambda
-                Version: 1
+                Version: "1"
               Configuration:
                 FunctionName: !Ref EnvironmentStateCaptureFunction
               InputArtifacts:
@@ -610,7 +610,7 @@ Resources:
                 Category: Invoke
                 Owner: AWS
                 Provider: Lambda
-                Version: 1
+                Version: "1"
               Configuration:
                 FunctionName: !Ref DeploymentNotificationFunction
                 UserParameters: !Sub |
@@ -629,7 +629,7 @@ Resources:
                 Category: Build
                 Owner: AWS
                 Provider: CodeBuild
-                Version: 1
+                Version: "1"
               Configuration:
                 ProjectName: !Ref AcceptanceTestsCodeBuildProject
               InputArtifacts:
@@ -644,7 +644,7 @@ Resources:
                 Category: Invoke
                 Owner: AWS
                 Provider: Lambda
-                Version: 1
+                Version: "1"
               Configuration:
                 FunctionName: !Ref ProductionConfigPseudoSourceFunction
               InputArtifacts:
@@ -657,7 +657,7 @@ Resources:
                 Category: Deploy
                 Owner: AWS
                 Provider: CloudFormation
-                Version: 1
+                Version: "1"
               Configuration:
                 ActionMode: CHANGE_SET_REPLACE
                 Capabilities: CAPABILITY_IAM
@@ -706,7 +706,7 @@ Resources:
                 Category: Approval
                 Owner: AWS
                 Provider: Manual
-                Version: 1
+                Version: "1"
               Configuration:
                 NotificationArn: !Ref CodePipelineApprovalsSnsTopic
                 CustomData: !Sub |
@@ -720,7 +720,7 @@ Resources:
                 Category: Deploy
                 Owner: AWS
                 Provider: CloudFormation
-                Version: 1
+                Version: "1"
               Configuration:
                 ActionMode: CHANGE_SET_EXECUTE
                 Capabilities: CAPABILITY_IAM
@@ -733,7 +733,7 @@ Resources:
                 Category: Invoke
                 Owner: AWS
                 Provider: Lambda
-                Version: 1
+                Version: "1"
               Configuration:
                 FunctionName: !Ref EnvironmentStateCaptureFunction
               InputArtifacts:
@@ -744,7 +744,7 @@ Resources:
                 Category: Invoke
                 Owner: AWS
                 Provider: Lambda
-                Version: 1
+                Version: "1"
               Configuration:
                 FunctionName: !Ref DeploymentNotificationFunction
                 UserParameters: !Sub |
@@ -1213,12 +1213,12 @@ Resources:
         The error rate on the diff notification lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -1274,12 +1274,12 @@ Resources:
         The error rate on the deploy notification lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -1333,12 +1333,12 @@ Resources:
         The error rate on the state capture lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -1389,12 +1389,12 @@ Resources:
         The error rate on the pseudo source lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -1438,12 +1438,12 @@ Resources:
         The error rate on the S3 commit proxy lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -1492,12 +1492,12 @@ Resources:
         The error rate on the S3 Sync lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
