Fix dependency declaration

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -123,8 +123,9 @@ Resources:
         Provides an API for inbound requests used by the notifications stack,
         such as Slack interactive messages
   RestApiDeployment:
-    DependsOn: IkeSlashCommandsRestApiProxyMethod
-    DependsOn: IkeCodePipelineApprovalRestApiProxyMethod
+    DependsOn:
+      - IkeSlashCommandsRestApiProxyMethod
+      - IkeCodePipelineApprovalRestApiProxyMethod
     Type: "AWS::ApiGateway::Deployment"
     Properties:
       RestApiId: !Ref RestApi
