Clean up notif. template types

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -238,12 +238,12 @@ Resources:
         The error rate on the Slack message relay lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -354,12 +354,12 @@ Resources:
         The error rate on the CloudFormation notifications hander lambda has
         exceeded 0 in the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -426,12 +426,12 @@ Resources:
         The error rate on the ASG notifications handler lambda has
         exceeded 0 in the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -483,12 +483,12 @@ Resources:
         The error rate on the CloudWatch Alarms notifications handler lambda has
         exceeded 0 in the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -914,12 +914,12 @@ Resources:
         The error rate on the Ike callback handler lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -939,12 +939,12 @@ Resources:
         The error rate on the Ike /commands handler lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
