Clean up template errors

--- a/stacks/analytics-ingest-lambda.yml
+++ b/stacks/analytics-ingest-lambda.yml
@@ -161,12 +161,12 @@ Resources:
       AlarmDescription:
         Too many analytics bigquery lambda errors
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "2"
+      EvaluationPeriods: 2
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "300"
+      Period: 300
       Statistic: Sum
-      Threshold: "1"
+      Threshold: 1
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -186,12 +186,12 @@ Resources:
       AlarmDescription:
         Too few invocations
       ComparisonOperator: LessThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Invocations
       Namespace: AWS/Lambda
-      Period: "300"
+      Period: 300
       Statistic: Sum
-      Threshold: "1500"
+      Threshold: 1500
       TreatMissingData: breaching
       Dimensions:
         - Name: FunctionName
@@ -210,12 +210,12 @@ Resources:
       AlarmDescription:
         Too many analytics pingbacks lambda errors
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "300"
+      Period: 300
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -234,12 +234,12 @@ Resources:
       AlarmDescription:
         Too many analytics redis lambda errors
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "300"
+      Period: 300
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
