--- a/stacks/dovetail-stitch-lambda-alarms.yml
+++ b/stacks/dovetail-stitch-lambda-alarms.yml
@@ -100,7 +100,7 @@ Resources:
       MetricTransformations:
         - MetricName: !Sub "dt_lambda_${EnvironmentTypeAbbreviation}_timeout"
           MetricNamespace: LogMetrics
-          MetricValue: 1
+          MetricValue: "1"
   LambdaWarnMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
@@ -109,7 +109,7 @@ Resources:
       MetricTransformations:
         - MetricName: !Sub "dt_lambda_${EnvironmentTypeAbbreviation}_warn"
           MetricNamespace: LogMetrics
-          MetricValue: 1
+          MetricValue: "1"
   LambdaErrorMetric:
     Type: "AWS::Logs::MetricFilter"
     Properties:
@@ -118,7 +118,7 @@ Resources:
       MetricTransformations:
         - MetricName: !Sub "dt_lambda_${EnvironmentTypeAbbreviation}_error"
           MetricNamespace: LogMetrics
-          MetricValue: 1
+          MetricValue: "1"
   LambdaErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Condition: CreateLambdaAlarms
@@ -149,12 +149,12 @@ Resources:
       AlarmDescription:
         Errors on the dovetail stitch lambda exceeded 0
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -189,12 +189,12 @@ Resources:
       AlarmDescription:
         Throttles on the dovetail stitch lambda exceeded 0
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Throttles
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -229,12 +229,12 @@ Resources:
       AlarmDescription:
         Logged errors on dovetail stitch lambda exceeded 0
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: !Sub "dt_lambda_${EnvironmentTypeAbbreviation}_error"
       Namespace: LogMetrics
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
   LambdaTimeoutAlarm:
     Type: "AWS::CloudWatch::Alarm"
@@ -266,12 +266,12 @@ Resources:
       AlarmDescription:
         Logged errors on dovetail stitch lambda exceeded 0
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: !Sub "dt_lambda_${EnvironmentTypeAbbreviation}_timeout"
       Namespace: LogMetrics
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
 Outputs:
   LambdaLogGroupName:
