--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -170,12 +170,12 @@ Resources:
       AlarmDescription: >
         5XX server errors originating from the dovetail application
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: HTTPCode_Target_5XX_Count
       Namespace: AWS/ApplicationELB
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
@@ -195,12 +195,12 @@ Resources:
       AlarmDescription: >
         5XX load balancer errors originating from the dovetail load balancer
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "2"
+      EvaluationPeriods: 2
       MetricName: HTTPCode_ELB_5XX_Count
       Namespace: AWS/ApplicationELB
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "5"
+      Threshold: 5
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
@@ -221,12 +221,12 @@ Resources:
         Target response time value for Dovetail load balancer targets at 99th
         percentile higher than expected
       ComparisonOperator: GreaterThanOrEqualToThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       ExtendedStatistic: p99
       MetricName: TargetResponseTime
       Namespace: AWS/ApplicationELB
-      Period: "300"
-      Threshold: "4"
+      Period: 300
+      Threshold: 4
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
@@ -247,12 +247,12 @@ Resources:
         Target response time value for Dovetail load balancer targets at 95th
         percentile higher than expected
       ComparisonOperator: GreaterThanOrEqualToThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       ExtendedStatistic: p95
       MetricName: TargetResponseTime
       Namespace: AWS/ApplicationELB
-      Period: "60"
-      Threshold: "6"
+      Period: 60
+      Threshold: 6
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
@@ -272,7 +272,7 @@ Resources:
       Protocol: HTTP
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
-          Value: 20
+          Value: "20"
       Tags:
         - Key: Project
           Value: Dovetail
@@ -376,7 +376,7 @@ Resources:
       Description: Allows for DesiredCount persistence on ECS services
       Environment:
         Variables:
-          DEFAULT_DESIRED_COUNT: 2
+          DEFAULT_DESIRED_COUNT: "2"
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt DovetailServiceDesiredCountRolloverIamRole.Arn
@@ -445,12 +445,12 @@ Resources:
       AlarmDescription: >
         Too many dovetails running
       ComparisonOperator: LessThanOrEqualToThreshold
-      EvaluationPeriods: "2"
+      EvaluationPeriods: 2
       MetricName: CPUUtilization
       Namespace: AWS/ECS
-      Period: "60"
+      Period: 60
       Statistic: Average
-      Threshold: "30"
+      Threshold: 30
       TreatMissingData: notBreaching
       Dimensions:
         - Name: ServiceName
@@ -483,12 +483,12 @@ Resources:
       AlarmDescription: >
         Not enough dovetails running
       ComparisonOperator: GreaterThanOrEqualToThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: CPUUtilization
       Namespace: AWS/ECS
-      Period: "60"
+      Period: 60
       Statistic: Average
-      Threshold: "50"
+      Threshold: 50
       TreatMissingData: notBreaching
       Dimensions:
         - Name: ServiceName
@@ -534,7 +534,7 @@ Resources:
       Protocol: HTTP
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
-          Value: 30
+          Value: "30"
       Tags:
         - Key: Project
           Value: Dovetail
