--- a/stacks/legacy-support/root.yml
+++ b/stacks/legacy-support/root.yml
@@ -78,4 +78,4 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "stripe-proxy.yml"]]
-      TimeoutInMinutes: "10"
+      TimeoutInMinutes: 10
