--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -133,12 +133,12 @@ Resources:
       AlarmDescription: >
         5XX server errors originating from the Platform ALB exceeded 0
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: HTTPCode_ELB_5XX_Count
       Namespace: AWS/ApplicationELB
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "3"
+      Threshold: 3
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
@@ -159,12 +159,12 @@ Resources:
         Target response time value for platform load balancer targets at 95th
         percentile higher than expected
       ComparisonOperator: GreaterThanOrEqualToThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       ExtendedStatistic: p95
       MetricName: TargetResponseTime
       Namespace: AWS/ApplicationELB
-      Period: "60"
-      Threshold: "0.5"
+      Period: 60
+      Threshold: 0.5
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
@@ -178,7 +178,6 @@ Outputs:
     Value: !GetAtt PlatformALB.DNSName
   PlatformALBDualstackDNSName:
     Description: The dualstack DNS name for the application load balancer
-    Value: !GetAtt PlatformALB.DNSName
     Value: !Sub dualstack.${PlatformALB.DNSName}
   PlatformALBFullName:
     Description: The full name for the application load balancer
