--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -86,7 +86,7 @@ Resources:
           Value: !Ref AWS::StackId
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
-          Value: 15
+          Value: "15"
       VpcId: !Ref VPC
   # ALB Listener Rules
   PlayALBHTTPSHostWildcardListenerRule:
@@ -276,12 +276,12 @@ Resources:
       AlarmDescription: >
         5XX server errors originating from the play target group exceeded 0
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: HTTPCode_Target_5XX_Count
       Namespace: AWS/ApplicationELB
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
