--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -231,12 +231,12 @@ Resources:
       Dimensions:
         - Name: ApiName
           Value: !Sub "${AWS::StackName} API"
-      EvaluationPeriods: "3"
+      EvaluationPeriods: 3
       MetricName: 5xxError
       Namespace: AWS/ApiGateway
-      Period: "300"
+      Period: 300
       Statistic: Sum
-      Threshold: "1"
+      Threshold: 1
       TreatMissingData: notBreaching
 Outputs:
   ApiDomainName:
