--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -73,7 +73,7 @@ Resources:
       Protocol: HTTP
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
-          Value: 15
+          Value: "15"
       Tags:
         - Key: Project
           Value: !FindInMap [Shared, Project, name]
@@ -187,12 +187,12 @@ Resources:
       AlarmDescription: >
         5XX server errors originating from the publish target group exceeded 0
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: HTTPCode_Target_5XX_Count
       Namespace: AWS/ApplicationELB
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
