--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -47,7 +47,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "upload.prx.org.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   RadiotopiaTowerStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
@@ -65,4 +65,4 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "tower.radiotopia.fm.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
