--- a/stacks/static-sites/root.yml
+++ b/stacks/static-sites/root.yml
@@ -94,7 +94,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "radio.radiotopia.fm.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
   BetaPrxOrgStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
@@ -116,4 +116,4 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "beta.prx.org.yml"]]
-      TimeoutInMinutes: "5"
+      TimeoutInMinutes: 5
