--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -202,12 +202,12 @@ Resources:
       AlarmDescription:
         The error rate on the upload lambda has exceeded 0
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -227,12 +227,12 @@ Resources:
       AlarmDescription:
         Throttles on the upload lambda has exceeded 0
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Throttles
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
@@ -252,12 +252,12 @@ Resources:
       AlarmDescription:
         At least one invocation duration exceeded 225ms
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Duration
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Maximum
-      Threshold: "225"
+      Threshold: 225
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
