--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -328,7 +328,7 @@ Resources:
       GroupDescription: Enable outbound traffic on cluster instances
       SecurityGroupEgress:
         - CidrIp: 0.0.0.0/0
-          IpProtocol: -1
+          IpProtocol: "-1"
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -534,12 +534,12 @@ Resources:
       AlarmDescription: >
         ECS Cluster ASG outbound network traffic is unusually high
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "2"
+      EvaluationPeriods: 2
       MetricName: NetworkOut
       Namespace: AWS/EC2
-      Period: "300"
+      Period: 300
       Statistic: Sum
-      Threshold: "25000000000"
+      Threshold: 25000000000
       TreatMissingData: missing
       Dimensions:
         - Name: AutoScalingGroupName
@@ -559,12 +559,12 @@ Resources:
       AlarmDescription: >
         ECS Cluster ASG inbound network traffic is unusually high
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "2"
+      EvaluationPeriods: 2
       MetricName: NetworkIn
       Namespace: AWS/EC2
-      Period: "300"
+      Period: 300
       Statistic: Sum
-      Threshold: "25000000000"
+      Threshold: 25000000000
       TreatMissingData: missing
       Dimensions:
         - Name: AutoScalingGroupName
@@ -652,7 +652,7 @@ Resources:
     Properties:
       AutoScalingGroupName: !Ref ECSClusterASG
       DefaultResult: "ABANDON"
-      HeartbeatTimeout: "900"
+      HeartbeatTimeout: 900
       LifecycleTransition: "autoscaling:EC2_INSTANCE_TERMINATING"
       NotificationTargetARN: !Ref ECSDrainSNSTopic
       RoleARN: !GetAtt ECSDrainSNSRole.Arn
