--- a/stacks/web-alb-application.yml
+++ b/stacks/web-alb-application.yml
@@ -159,7 +159,7 @@ Resources:
       Protocol: HTTP
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
-          Value: 30
+          Value: "30"
       Tags:
         - Key: Project
           Value: !Ref AppName
@@ -188,12 +188,12 @@ Resources:
       AlarmDescription: !Sub |
         5XX server errors originating from the ${AppName} application
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: HTTPCode_Target_5XX_Count
       Namespace: AWS/ApplicationELB
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
@@ -213,12 +213,12 @@ Resources:
       AlarmDescription: !Sub |
         5XX load balancer errors originating from the ${AppName} load balancer
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: HTTPCode_ELB_5XX_Count
       Namespace: AWS/ApplicationELB
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "2"
+      Threshold: 2
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
@@ -239,12 +239,12 @@ Resources:
         Target response time value for ${AppName} load balancer targets at 95th
         percentile higher than expected
       ComparisonOperator: GreaterThanOrEqualToThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       ExtendedStatistic: p95
       MetricName: TargetResponseTime
       Namespace: AWS/ApplicationELB
-      Period: "300"
-      Threshold: "0.2"
+      Period: 300
+      Threshold: 0.2
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
