--- a/stacks/web-application.yml
+++ b/stacks/web-application.yml
@@ -90,7 +90,7 @@ Resources:
       Protocol: HTTP
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
-          Value: 30
+          Value: "30"
       Tags:
         - Key: Project
           Value: !Ref AppName
@@ -144,12 +144,12 @@ Resources:
       AlarmDescription: !Sub |
         5XX server errors originating from the ${AppName} target group exceeded 0
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: HTTPCode_Target_5XX_Count
       Namespace: AWS/ApplicationELB
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
