Fix types in Dovetail CDN template

--- a/cdn/dovetail-cdn.yml
+++ b/cdn/dovetail-cdn.yml
@@ -131,12 +131,12 @@ Resources:
           Value: Global
         - Name: DistributionId
           Value: !Ref CloudFrontDistribution
-      EvaluationPeriods: "2"
+      EvaluationPeriods: 2
       MetricName: 4xxErrorRate
       Namespace: AWS/CloudFront
-      Period: "300"
+      Period: 300
       Statistic: Average
-      Threshold: "30"
+      Threshold: 30
       TreatMissingData: notBreaching
       Unit: Percent
   CloudFrontDistribution500Alarm:
@@ -161,12 +161,12 @@ Resources:
           Value: Global
         - Name: DistributionId
           Value: !Ref CloudFrontDistribution
-      EvaluationPeriods: "5"
+      EvaluationPeriods: 5
       MetricName: 5xxErrorRate
       Namespace: AWS/CloudFront
-      Period: "60"
+      Period: 60
       Statistic: Average
-      Threshold: "0.01"
+      Threshold: 0.01
       TreatMissingData: notBreaching
       Unit: Percent
 Outputs:
