--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -200,12 +200,12 @@ Resources:
         The error rate on the secrets S3 update lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: "1"
+      EvaluationPeriods: 1
       MetricName: Errors
       Namespace: AWS/Lambda
-      Period: "60"
+      Period: 60
       Statistic: Sum
-      Threshold: "0"
+      Threshold: 0
       TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
